2010-05-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: Make ‘keepdate’ actually keep the date.

	Regression introduced 2010-04-12,
	"Use spaces for "ci -k" support".
	* rcskeep.c (keepdate): Use ‘intern’, not ‘finish_string’.

2010-05-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: parse_revpairs

	* rcsutil.c (parse_revpairs): New func.
	* base.h (parse_revpairs): New func decl.
	* rcs.c (putdelrev): New static func.
	(getdelrev): Delete func.
	(main): Use ‘parse_revpairs’.
	* rlog.c (putrevpairs): New static func.
	(getrevpairs): Delete func.
	(main): Use ‘parse_revpairs’.

2010-05-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	ident: Make error message more conventional.

	* ident.c (reportError): Delete func.
	(scanfile, main): Use ‘syserror_errno’.

2010-05-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘struct link’ more.

	* rlog.c (struct rcslockers): Delete.
	(struct stateattri, struct authors): Likewise.
	(authorlist, lockerlist, statelist): Change type to ‘struct link *’.
	(getlocker, getauthor, getstate): Use ‘extend’.
	(extractdelta, trunclocks): Update to walk ‘struct link *’ list.
	* rcs.c (struct Lockrev): Delete.
	(newlocklst, rmvlocklst): Change type to ‘struct link *’.
	(rmnewlocklst): Return ‘struct link *’.
	(dolocks): Update to walk ‘struct link *’ list.
	(main): Use ‘extend’.

2010-05-02  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘bool’ more.

	* base.h (struct hshentry): Change type of member ‘selector’ to bool.

2010-04-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Freeze RCS file syntax; drop ‘newphrase’ support.

	* base.h (struct hshentry): Delete members ‘ig’, ‘igtext’.
	(struct parse_state): Delete member ‘ignore’.
	(struct repository): Delete member ‘description’.
	(warnignore, getphrases, ignorephrases): Delete func decls.
	* ci.c (main): Don't init ‘newdelta.ig’, ‘newdelta.igtext’.
	* rcs.c (scanlogtext): Expect ‘text’ after ‘log’.
	* rcsfnms.c (InitAdmin): Don't init ‘ADMIN (description)’.